2004-02-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/dialogs/stroke-style.cpp (marker_id_to_string):
	Remove unused function.

2004-02-24  Alexander Clausen <alex@skip86.com>
	
	* src/desktop-events.cpp: Fix crash when opening the guide dialog for
	the second time

2004-02-24  bulia byak <bulia@users.sourceforge.net>

	* src/helper/sodipodi-ctrlrect.cpp: A smart always-visible inversion for ctrlrect border 

	* src/select-toolbar.cpp: Fix for 873723

	* src/style.h src/style.cpp: write_difference only writes what is .set in the target style

	* src/selection-chemistry.cpp: Paste style merges the style of the clipboard
	with the object's current style

	* src/xml/repr-io.cpp: Do not cut leading/trailing whitespace on text nodes,
	only reject all-whitespace nodes

	* src/pixmaps/handles.xpm src/seltrans.cpp src/knot.cpp src/nodepath.cpp
	src/helper/sodipodi-ctrl.cpp: Changed xor compositing for ctrls, made seltrans
	handles inverse, tweaked knot colors

	* doc/keys-html.xsl doc/keys.html: keys.html now validates

	* src/desktop.cpp src/desktop.h: New function to autoscroll desktop so a point
	becomes visible

	* src/rubberband.cpp src/select-context.cpp src/nodepath.cpp: Use the new
	function to scroll desktop to a point

	* src/desktop.cpp src/preferences-skeleton.h: options.autoscrollspeed 

2004-02-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-matrix.h: Add `explicit' to Matrix constructors
	from rotate/scale/translate, to reduce the number of mysterious
	implicit conversions used in client code.
	Don't #include nr-rotate-ops.h, nr-scale-ops.h, nr-translate-ops.h.

	* src/selection-chemistry.cpp (sp_selection_apply_affine):
	Change final argument from double[6] to NR::Matrix.
	Update callers.
	(sp_selection_scale_relative): Change from dx,dy to NR::scale argument.
	Update callers.
	(sp_selection_scale, sp_selection_scale_times): Cleanup.

	* src/libnr/Makefile.am: