@@ -1,0 +1,18 @@
+#ifndef SEEN_MARKER_DEBUG_H
+#define SEEN_MARKER_DEBUG_H
+
+void marker_status(char const *format, ...) __attribute__((format(__printf__, 1, 2)));
+
+#endif /* !SEEN_MARKER_DEBUG_H */
+
+/*
+  Local Variables:
+  mode:c++
+  c-file-style:"stroustrup"
+  c-file-offsets:((innamespace . 0)(inline-open . 0))
+  indent-tabs-mode:nil
+  fill-column:99
+  End:
+  vim: filetype=c++:expandtab:shiftwidth=4:tabstop=8:softtabstop=4 :
+*/
+
